22-AGIC-SSL-with-LetsEncrypt/02-kube-manifests/05-Ingress-SSL-LetsEncrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl-letsencrypt
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"    
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  ingressClassName: azure-application-gateway
  tls:
  - secretName: sapp1-thiruaws.com-secret 
    hosts:
    - sapp1.thiruaws.com.com    
  - secretName: sapp2-thiruaws.com-secret                     
    hosts:
    - sapp2.thiruaws.com.com  
  rules:
    - host: sapp1.thiruaws.com.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
    - host: sapp2.thiruaws.com.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80
